# Group16

./: BackMeUp.pptx  Cargo.toml  README.md  Report .md  config.toml  cpu_log.txt  setup_macos_linux.sh
BackMeUp.app/Contents/MacOS/: Group16  backup_program
BackMeUp/Resources/: config.toml  cpu_log.txt
src/: audio.rs  backup.rs  backup_program.rs  config_program.rs  cpu_evaluation.rs  display_window.rs  main.rs  mouse_tracker.rs  service.rs  uninstall_service.rs
