[package]
name = "Group16"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
inputbot = "0.3"
rdev = "0.5"
sysinfo = "0.28"
rodio = "0.19.0"
eframe = "0.29.0"

[build-dependencies]
windows = {version = "0.58.0", optional = true}
core-graphics = {version = "0.24.0", optional = true}
x11 = {version = "2.21.0", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"



