[package]
name = "Group16"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "config_program"
path = "src/config_program.rs"

[[bin]]
name = "backup_program"
path = "src/backup_program.rs"

[features]
default = []

[dependencies]
sysinfo = "0.31.4"
log = "0.4.14"
chrono = "0.4.19"
inputbot = "0.3"
rdev = "0.5"
rodio = "0.19.0"
eframe = "0.29.0"
egui = "0.29.0"
fs_extra = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
rfd = "0.15.0"

[build-dependencies]
windows = {version = "0.58.0", optional = true}
core-graphics = {version = "0.24.0", optional = true}
x11 = {version = "2.21.0", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"



